<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/theme"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_crossfade"
        android:title="@string/crossfade"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mix_audio"
        android:title="@string/mix_audio"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
